exports[`Presets Presets genOpacity should return an object with opacity 1`] = `
Object {
  "damping": 40,
  "precision": 0.01,
  "stiffness": 300,
  "val": undefined
}
`;

exports[`Presets Presets genScale should return an object with scale 1`] = `
Object {
  "damping": 40,
  "precision": 0.01,
  "stiffness": 300,
  "val": 1
}
`;

exports[`Presets Presets should be defined 1`] = `
Object {
  "clicked": [Function clicked],
  "genOpacity": [Function genOpacity],
  "genScale": [Function genScale]
}
`;
